[package]
name = "ofmice"
version = "0.1.0"
authors = ["Magnus Larsen <golgothasTerror101@gmail.com>"]
edition = "2018"
default-run = "ofmice"

[[bin]]
name = "ofpatchtool"

[dependencies]
vgtk = "0.2.1"
strum = "0.18.0"
strum_macros = "0.18.0"
pretty_env_logger = "0.4.0"
steamworks = "0.6.1"
reqwest = { version = "0.10.4", features = ["default-tls", "json", "stream"] }
xz2 = "0.1.6"
tar = "0.4.26"
ddelta = "0.2.1"
serde_derive = "1.0.106"
serde = "1.0.106"
serde_json = "1.0.52"
tokio = { version = "0.2.20", features = ["rt-threaded", "macros"] }
