[package]
name = "ofmice"
version = "0.1.0"
authors = ["Magnus 'Nopey' Larsen <imjustagan@gmail.com>", "Tzlil 'Terradice' <terradice@protonmail.com>"]
edition = "2018"
default-run = "ofmice"

[lib]
name = "ofmice"
[[bin]]
name = "ofpatchtool"
[[bin]]
name = "ofmice"

[features]
steam_wrangler = [ "steamworks" ]

[dependencies]
#UI
gtk = "0.8.1"
gdk-pixbuf = "0.8.0"
gio = "0.8.1"
glib = "0.9.3"

# i can't remember
strum = "0.18.0"
strum_macros = "0.18.0"


# for steam_wrangler. libsteam_api.so
steamworks = { version = "0.6.1", optional = true }

# download and installation use these
reqwest = { version = "0.10.4", features = ["default-tls", "json", "stream"] }
xz2 = "0.1.6"
tar = "0.4.26"
ddelta = "0.2.1"
serde_derive = "1.0.106"
serde = "1.0.106"
serde_json = "1.0.52"

# async main
tokio = { version = "0.2.20", features = ["rt-threaded", "macros"] }
gdk = "0.12.1"
cairo-rs = "0.8.1"
arc-swap = "0.4.6"

#unsorted
