[package]
name = "ofmice"
version = "0.1.0"
authors = ["Magnus 'Nopey' Larsen <imjustagan@gmail.com>", "Tzlil 'Terradice' <terradice@protonmail.com>"]
edition = "2018"
default-run = "ofmice"

[lib]
name = "ofmice"
[[bin]]
name = "ofpatchtool"
[[bin]]
name = "ofmice"

[features]
steam_wrangler = [ "steamworks" ]

[dependencies]
#UI
gtk = "0.9.0"
gdk-pixbuf = "0.9.0"
gio = "0.9.0"
glib = "0.10.0"
gdk = "0.13.0"
cairo-rs = "0.9.0"

# i can't remember
strum = "0.18.0"
strum_macros = "0.18.0"


# for steam_wrangler. libsteam_api.so
# steamworks = { version = "0.6.1", optional = true }
steamworks = { optional = true, git = "https://github.com/Thinkofname/steamworks-rs" }

# download and installation use these
reqwest = { version = "0.10.6", features = ["default-tls", "json", "stream"] }
bytes = "0.5.5"
xz2 = "0.1.6"
tar = "0.4.26"
ddelta = "0.2.1"
serde_derive = "1.0.106"
serde = "1.0.106"
serde_json = "1.0.52"

# async main
tokio = { version = "0.2.20", features = ["rt-threaded", "macros"] }
arc-swap = "0.4.6"
lazy_static = "1.4.0"

#unsorted
